Design preview of IoT devices

--- a/Bionly/Bionly/Bionly.csproj
+++ b/Bionly/Bionly/Bionly.csproj
@@ -7,6 +7,120 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\bionly_logo.png" />
+    <None Remove="Resources\bionly_logo_svg.svg" />
+    <None Remove="Resources\bionly_square.ico" />
+    <None Remove="Resources\bionly_square_1024.png" />
+    <None Remove="Resources\bionly_square_108.png" />
+    <None Remove="Resources\bionly_square_120.png" />
+    <None Remove="Resources\bionly_square_144.png" />
+    <None Remove="Resources\bionly_square_152.png" />
+    <None Remove="Resources\bionly_square_162.png" />
+    <None Remove="Resources\bionly_square_167.png" />
+    <None Remove="Resources\bionly_square_180.png" />
+    <None Remove="Resources\bionly_square_192.png" />
+    <None Remove="Resources\bionly_square_20.png" />
+    <None Remove="Resources\bionly_square_216.png" />
+    <None Remove="Resources\bionly_square_29.png" />
+    <None Remove="Resources\bionly_square_324.png" />
+    <None Remove="Resources\bionly_square_40.png" />
+    <None Remove="Resources\bionly_square_432.png" />
+    <None Remove="Resources\bionly_square_48.png" />
+    <None Remove="Resources\bionly_square_512.png" />
+    <None Remove="Resources\bionly_square_58.png" />
+    <None Remove="Resources\bionly_square_60.png" />
+    <None Remove="Resources\bionly_square_72.png" />
+    <None Remove="Resources\bionly_square_76.png" />
+    <None Remove="Resources\bionly_square_80.png" />
+    <None Remove="Resources\bionly_square_87.png" />
+    <None Remove="Resources\bionly_square_96.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\bionly_logo.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_logo_svg.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_1024.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_108.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_120.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_144.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_152.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_162.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_167.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_180.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_192.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_20.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_216.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_29.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_324.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_40.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_432.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_48.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_512.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_58.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_60.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_72.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_76.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_80.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_87.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bionly_square_96.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
@@ -23,6 +137,9 @@
     <EmbeddedResource Update="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\DashboardPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
 </Project>
