--- a/Bionly/Bionly.Android/Bionly.Android.csproj
+++ b/Bionly/Bionly.Android/Bionly.Android.csproj
@@ -58,8 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
@@ -95,6 +95,14 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\bionly_square.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\drawable\bionly_square_1024.png" />
+    <Content Include="Resources\drawable\icon_Documents.png" />
+    <Content Include="Resources\drawable\icon_Home.png" />
+    <Content Include="Resources\drawable\icon_Info.png" />
+    <Content Include="Resources\drawable\icon_Settings.png" />
+    <Content Include="Resources\drawable\icon_VideoCamera.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
