--- a/Bionly/Bionly.iOS/Bionly.iOS.csproj
+++ b/Bionly/Bionly.iOS/Bionly.iOS.csproj
@@ -135,15 +135,6 @@
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
       <Visible>false</Visible>
     </ImageAsset>
-    <BundleResource Include="Resources\icon_about.png" />
-    <BundleResource Include="Resources\icon_about%402x.png" />
-    <BundleResource Include="Resources\icon_about%403x.png" />
-    <BundleResource Include="Resources\icon_feed.png" />
-    <BundleResource Include="Resources\icon_feed%402x.png" />
-    <BundleResource Include="Resources\icon_feed%403x.png" />
-    <BundleResource Include="Resources\xamarin_logo.png" />
-    <BundleResource Include="Resources\xamarin_logo%402x.png" />
-    <BundleResource Include="Resources\xamarin_logo%403x.png" />
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
   </ItemGroup>
   <ItemGroup>
@@ -155,8 +146,8 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
@@ -167,5 +158,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="bionly_square.ico" />
+    <Content Include="Resources\bionly_square_1024.png" />
+    <Content Include="Resources\icon_Documents.png" />
+    <Content Include="Resources\icon_Home.png" />
+    <Content Include="Resources\icon_Info.png" />
+    <Content Include="Resources\icon_Settings.png" />
+    <Content Include="Resources\icon_VideoCamera.png" />
   </ItemGroup>
 </Project>
