--- a/Bionly/Bionly.iOS/Bionly.iOS.csproj
+++ b/Bionly/Bionly.iOS/Bionly.iOS.csproj
@@ -212,5 +212,8 @@
     <BundleResource Include="Resources\icon_night.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </BundleResource>
+    <BundleResource Include="Resources\icon_language.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </BundleResource>
   </ItemGroup>
 </Project>
